Bug 1168125 - Fixed regression where the content panel wouldn't stretch to fill the entire availalbe space on non-e10s, r=bgrins
UltraBlame original commit: 67e5dc5938713a839411c7131a12c4250f9f6296

--- a/browser/themes/shared/devtools/performance.inc.css
+++ b/browser/themes/shared/devtools/performance.inc.css
@@ -147,10 +147,6 @@
 .realtime-disabled-message,
 .realtime-disabled-on-e10s-message {
   display: none;
-  
-
-
-  max-width: 60vw;
 }
 
 #performance-view[e10s="disabled"] .realtime-disabled-on-e10s-message {
